improved code evaluate arith exp